<resources>
    <string name="app_name">Who Lang</string>
    <string name="tahun">Tahun Rilis :</string>
    <string name="lang">Bahasa Pemrograman</string>
    <string name="who">Pengembang :</string>
    <string name="description">Deskripsi</string>
    <string name="nama">Muhamad Afriza</string>
    <string name="email">afriza939@gmail.com</string>
    <string name="action_share">Share</string>
    <string name="ic_user">user</string>
    <string-array name="lang_name">
        <item>Java</item>
        <item>JavaScript</item>
        <item>Dart</item>
        <item>Kotlin</item>
        <item>C++</item>
        <item>C#</item>
        <item>Ruby</item>
        <item>PHP</item>
        <item>Swift</item>
        <item>Python</item>
    </string-array>
</resources>