<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="6dp"
    android:foreground="?android:attr/selectableItemBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:padding="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:layout_gravity="center_horizontal|center_vertical"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <TextView
                android:id="@+id/txt_name_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                tools:text="@string/lang"
                android:textSize="20dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tahun_rilis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginRight="5dp"
                    tools:text="@string/tahun" />

                <TextView
                    android:id="@+id/txt_since_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/roundedcorner"
                    android:padding="2dp"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="@string/tahun" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_owner_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:text="@string/who" />

            <TextView
                android:id="@+id/txt_desc_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textSize="11sp"
                android:maxLines="2"
                android:ellipsize="end"
                tools:text="@string/description" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>